<resources>
    <string name="app_name">Stories</string>

    <!-- Strings related to login/signin -->
    <string name="prompt_username">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_confirm_password">Confirmar contraseña</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Nombre</string>
    <string name="action_login">Iniciar sesion</string>
    <string name="action_signin">Crear una nueva cuenta</string>
    <string name="action_edit_profile">Actualizar</string>
    <string name="error_invalid_login">Usuario o password incorrecto</string>
    <string name="error_invalid_signin">Ocurrió un error al registrar al usuario</string>
    <string name="error_invalid_passwords">La contraseñas deben ser iguales</string>

    <!-- Strings related to Menu -->
    <string name="story_menu">Crear Historia</string>
    <string name="messages_menu">Mensajes directos</string>
    <string name="friendship_menu">Solicitudes de amistad</string>
    <string name="profile_menu">Perfil</string>
    <string name="stories_map">Ver en Mapa</string>
    <string name="logout">Cerrar sesión</string>

    <!-- String related to User -->
    <string name="user_search_query_hint">Ingresa un usuario</string>

    <!-- Strings related to Create Story -->
    <string name="prompt_title">Título</string>
    <string name="prompt_description">Descripción</string>
    <string name="label_visibility_public">Pública</string>
    <string name="label_visibility_private">Privada</string>
    <string name="label_isQuickStory">História Rápida</string>
    <string name="action_selectImage">Cargar imagen o video</string>

    <!-- Strings related to Create Message -->
    <string name="message_destination">Destinatario</string>
    <string name="message_text">Mensaje</string>
    <string name="action_sendMessage">Enviar</string>

    <string name="error_invalid_message">No existe nadie con ese usuario.</string>
    <string name="facebook_app_id">1039303862894248</string>
    <string name="fb_login_protocol_scheme">fb1039303862894248</string>

    <!-- Strings related to Stories in Home -->
    <string name="new_comment">Agregar un comentario...</string>
    <string name="quick_stories_title">Historias rápidas</string>

    <!-- Strings related to Images Filters -->
    <string name="activity_title_main">Filtros</string>
    <string name="action_settings">Settings</string>
    <string name="filters">FILTROS</string>
    <string name="edit">EDITAR</string>

    <string name="lbl_brightness">BRILLO</string>
    <string name="lbl_contrast">CONTRASTE</string>
    <string name="lbl_saturation">SATURACION</string>
    <string name="tab_filters">FILTROS</string>
    <string name="tab_edit">EDITAR</string>

    <string name="roboto_medium">sans-serif-medium</string>
    <string name="filter_normal">Normal</string>
    <string name="action_save">GUARDAR</string>
    <string name="action_open">ABRIR</string>
    <string name="title_activity_stories_map">Map</string>

</resources>
