<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">


<!--    <item
        android:id="@+id/chat"
        app:showAsAction="always"
        android:title="Chat"/>-->

    <item
        android:id="@+id/story_menu"
        android:icon="@drawable/ic_add_story"
        android:title="@string/story_menu"
        app:showAsAction="always" />
    <item
        android:id="@+id/direct_messages"
        android:icon="@drawable/ic_direct_message"
        android:title="@string/messages_menu"
        app:showAsAction="always" />
    <item
        android:id="@+id/friendship_requests"
        android:icon="@drawable/ic_search_friends"
        android:title="@string/friendship_menu"
        app:showAsAction="always" />
    <item
        android:id="@+id/profile_menu"
        app:showAsAction="never"
        android:title="@string/profile_menu"/>
    <item
        android:id="@+id/stories_map"
        app:showAsAction="never"
        android:title="@string/stories_map"/>
    <item
        android:id="@+id/logout"
        app:showAsAction="never"
        android:title="@string/logout"/>
</menu>