<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/createStoryLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".activities.CreateStoryActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat">

        <TextView
            android:id="@+id/toolbar_title"
            style="@style/DefaultTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Crear Historia"
            android:textColor="@color/textPrimary"
            android:textSize="25sp" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/createStoryTitle"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_title"
            android:inputType="text"
            android:textSize="18sp"
            app:layout_constraintVertical_bias="0.326" />

        <EditText
            android:id="@+id/createStoryDescription"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:hint="@string/prompt_description"
            android:inputType="textMultiLine" />

        <CheckBox
            android:id="@+id/createStoryIsQuickStory"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/raleway"
            android:text="@string/label_isQuickStory"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/createStoryVisibility"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:checkedButton="@+id/createStoryVisibilityIsPublic"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/createStoryVisibilityIsPublic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway"
                android:text="@string/label_visibility_public"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/createStoryVisibilitIsPrivate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway"
                android:text="@string/label_visibility_private"
                android:textSize="18sp" />
        </RadioGroup>

        <Button
            android:id="@+id/createStoryButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/action_selectImage" />
    </LinearLayout>

</LinearLayout>