<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.SignInActivity">

    <TextView
        android:id="@+id/app_title"
        style="@style/DefaultTitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Stories"
        android:textColor="@color/textColorSecondary"
        android:textSize="60sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/prompt_username"
            android:inputType="text" />

        <TextView
            android:id="@+id/invalid_username"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="Usuario invalido"
            android:textColor="@color/colorError"
            android:textSize="14sp"
            android:visibility="invisible"
            tools:text="Ocurrio un error al registrar al usuario" />

        <EditText
            android:id="@+id/email"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="text|textEmailAddress" />

        <TextView
            android:id="@+id/invalid_email"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="Email invalido"
            android:textColor="@color/colorError"
            android:textSize="14sp"
            android:visibility="invisible"
            tools:text="Ocurrio un error al registrar al usuario" />

        <EditText
            android:id="@+id/password"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/invalid_password"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="La contraseña debe tener 8 o mas caracteres"
            android:textColor="@color/colorError"
            android:textSize="14sp"
            android:visibility="invisible"
            tools:text="Ocurrio un error al registrar al usuario" />

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/prompt_confirm_password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/invalid_password_confirmation"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="La contraseña no es la misma"
            android:textColor="@color/colorError"
            android:textSize="14sp"
            android:visibility="invisible"
            tools:text="Ocurrio un error al registrar al usuario" />

        <EditText
            android:id="@+id/name"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/prompt_name"
            android:inputType="text" />

        <TextView
            android:id="@+id/invalid_name"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="Nombre invalido"
            android:textColor="@color/colorError"
            android:textSize="14sp"
            android:visibility="invisible"
            tools:text="Ocurrio un error al registrar al usuario" />

        <Button
            android:id="@+id/signInButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway"
            android:text="@string/action_signin" />

        <TextView
            android:id="@+id/signInResult"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorError"
            android:textSize="20sp"
            tools:text="Ocurrio un error al registrar al usuario" />

    </LinearLayout>

</LinearLayout>