<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DirectMessagesCreateActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary_material_light"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat">

        <TextView
            android:id="@+id/toolbar_title"
            style="@style/DefaultTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enviar Mensaje Nuevo"
            android:textColor="@color/textPrimary"
            android:textSize="25sp" />

    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/createMessageDestination"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:hint="@string/message_destination"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.233"
    />

    <EditText
        android:id="@+id/createMessageText"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:hint="@string/message_text"
        android:inputType="textCapSentences|textMultiLine"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333" />
    />

    <Button
        android:id="@+id/sendMessageButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway"
        android:text="@string/action_sendMessage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.433" />
    />

    <TextView
        android:id="@+id/sendMessageResult"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/colorError"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.533" />
    />


</android.support.constraint.ConstraintLayout>